<resources>
    <!-- App Bar -->
    <string name="app_name">EZ Recipes</string>
    <string name="app_description">Easy recipes finder app</string>
    <string name="app_logo_alt">Food cooking in a pot</string>
    <string name="hamburger_menu_alt">Open menu</string>
    <string name="favorite_alt">Favorite this recipe</string>
    <string name="un_favorite_alt">Un-favorite this recipe</string>
    <string name="share_alt">Share this recipe</string>
    <string name="share_body">Check out this low-effort recipe!</string>

    <!-- Tabs -->
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="glossary_tab">Glossary</string>
    <string name="profile_tab">Profile</string>

    <!-- Home Screen -->
    <string name="find_recipe_button">Find Me a Recipe!</string>
    <string name="error_title">Error</string>
    <string name="unknown_error">
        Something went terribly wrong. Please submit a bug report to https://github.com/Abhiek187/ez-recipes-android/issues
    </string>
    <!-- Android strings: https://developer.android.com/reference/android/R.string -->
    <string name="ok_button">@android:string/ok</string>
...
        <item>Mashing the potatoes… 🥔</item>
        <item>Fluffing some rice… 🍚</item>
        <item>Mixing things up… 🥘</item>
        <item>Shaking things up… 🍲</item>
    </string-array>

    <string name="profile_favorites">💖 Favorites</string>
    <string name="profile_recently_viewed">⌚ Recently Viewed</string>
    <string name="profile_ratings">⭐ Ratings</string>
    <string name="accordion_expand">Expand</string>
    <string name="accordion_collapse">Collapse</string>
    <string name="sign_in_for_recipes">Sign in to view your saved recipes</string>

    <!-- Recipe Screen -->
    <string name="no_recipe">No recipe loaded</string>
    <string name="recipe_link">Open recipe source</string>
    <!-- Formatter syntax: -->
    <!-- https://developer.android.com/reference/java/util/Formatter.html#format-string-syntax -->
    <string name="image_copyright">Image © %1$s</string>

    <plurals name="recipe_time">
        <item quantity="one">Time: %1$d minute</item>
...
        <item quantity="other">%1$s ratings</item>
    </plurals>
    <string name="rating_error">You must be signed in to rate this recipe</string>

    <string name="recipe_meal_types">Great for: %1$s</string>
    <string name="recipe_cuisines">Cuisines: %1$s</string>
    <string name="show_recipe_button">Show Me Another Recipe!</string>

    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="health_score">Health Score: %1$d%%</string>

    <plurals name="servings">
        <item quantity="one">%1$d serving</item>
        <item quantity="other">%1$d servings</item>
    </plurals>

    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fiber">Fiber</string>
    <string name="sugar">Sugar</string>
    <string name="protein">Protein</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>

    <string name="summary">Summary</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_url">https://img.spoonacular.com/ingredients_100x100/%1$s</string>
    <string name="steps">Steps</string>
    <string name="equipment">Equipment</string>
    <string name="equipment_url">https://img.spoonacular.com/equipment_100x100/%1$s</string>
    <string name="attribution">Powered by spoonacular</string>

    <!-- Search Screen -->
    <string name="query_section">Query</string>
    <string name="query_placeholder">food</string>

    <string name="min_cals_placeholder">0</string>
    <string name="max_cals_placeholder">2000</string>
    <string name="calorie_label">≤ Calories ≤</string>
    <string name="calorie_unit">kcal</string>
    <string name="calorie_exceed_max_error">Error: Calories must be ≤ 2000</string>
    <string name="calorie_invalid_range_error">Error: Max calories cannot exceed min calories</string>

    <string name="vegetarian_label">Vegetarian</string>
    <string name="vegan_label">Vegan</string>
    <string name="gluten_free_label">Gluten-Free</string>
    <string name="healthy_label">Healthy</string>
    <string name="cheap_label">Cheap</string>
    <string name="sustainable_label">Sustainable</string>

    <string name="option_none">(none)</string>
    <string name="rating_label">Rating</string>
    <string name="spice_label">Spice Level</string>
    <string name="type_label">Meal Type</string>
    <string name="culture_label">Cuisine</string>
    <string name="expand_alt">Expand dropdown</string>
    <string name="collapse_alt">Collapse dropdown</string>
    <string name="apply_button">Apply</string>
    <string name="no_results">No recipes found</string>

    <string name="results_title">Results</string>
    <string name="results_placeholder">Use the filters to search for your favorite recipes!</string>
    <string name="sort_label">Sort</string>
    <string name="sort_alt_asc">Sort in ascending order</string>
    <string name="sort_alt_desc">Sort in descending order</string>

    <!-- Profile Screen -->
    <string name="profile_loading">Getting your profile ready… 🧑‍🍳</string>
    <string name="profile_header">Chef %1$s</string>
    <plurals name="favorites">
        <item quantity="one">%1$s favorite</item>
        <item quantity="other">%1$s favorites</item>
    </plurals>
    <plurals name="recipes_viewed">
        <item quantity="one">%1$s recipe viewed</item>
        <item quantity="other">%1$s recipes viewed</item>
    </plurals>

    <!-- Newlines add additional spacing before each line (but is ok for a bulleted list) -->
    <string name="login_message">
        Signing up for an account is free and gives you great perks, including:\n\n
        &#8226; Saving your favorite recipes\n
        &#8226; Saving more than 10 recently viewed recipes\n
        &#8226; Rating recipes\n
        &#8226; Syncing recipes across the web and mobile apps
    </string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="linked_accounts">Linked Accounts</string>
    <string name="unlink">Unlink</string>
...
